syntax = "proto3";

message VerificationKey {
        oneof sum {
                bytes ed25519 = 1;
                bytes secp256k1 = 2;
        }
}

message SignedAuthenticationMessage {
        VerificationKey verification_key = 1;
        bytes signed_authentication = 2;
}